# active_inference_simple_sim

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  sim_1d_efe.py  sim_1d_prob.py  sim_2d.py  sim_2d_prob.py
