[project]
name = "active-inference-simple-sim"
version = "0.1.0"
description = "Simple simulation of Active Inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.9.0",
    "jaxlib>=0.9.0",
    "matplotlib>=3.10.8",
]

# Development dependencies (tools not required to run the simulation)
[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
# Maximum line length
line-length = 88

[tool.ruff.lint]
# Rule categories to enable
# E: pycodestyle, F: Pyflakes, I: isort (import sorting)
select = ["E", "F", "I"]
# Rule codes to ignore
ignore = ["E501"]

[tool.ruff.format]
# Use double quotes for strings (Black compatibility)
quote-style = "double"
